--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.14",
+    "@headlessui/react": "^1.7.16",
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.18",
-    "@metaplex-foundation/js": "^0.19.3",
-    "@solana/wallet-adapter-base": "^0.9.22",
-    "@solana/wallet-adapter-react": "^0.15.32",
-    "@solana/wallet-adapter-react-ui": "^0.9.31",
-    "@solana/wallet-adapter-wallets": "^0.19.16",
-    "@solana/web3.js": "^1.76.0",
+    "@metaplex-foundation/js": "^0.19.4",
+    "@solana/spl-token": "^0.3.8",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.34",
+    "@solana/wallet-adapter-react-ui": "^0.9.33",
+    "@solana/wallet-adapter-wallets": "^0.19.20",
+    "@solana/web3.js": "^1.78.4",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "bigint-buffer": "^1.1.5",
     "bn.js": "^5.2.1",
+    "bs58": "^4.0.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
@@ -35,10 +37,11 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "eslint-config-prettier": "^8.8.0",
+    "@types/bs58": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "eslint-config-prettier": "^8.10.0",
     "prettier": "^2.8.8",
-    "prettier-plugin-organize-imports": "^3.2.2",
+    "prettier-plugin-organize-imports": "^3.2.3",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
